# tempo

./: Cargo.toml  Dockerfile  Dockerfile.chef  deny.toml  docker-bake-profiling.hcl  docker-bake.hcl  tempo.nu
.changelog/: config.toml
.github/scripts/: bench-slack-notify.js
.github/workflows/: build-devnet.yml  build.yml  changelog.yml  lint.yml  pr-audit.yml  publish-check.yml  publish.yml  release-pr.yml  rpc-tests.yml  semver-check.yml  specs.yml  test.yml  update-reth.yml
contrib/bench/grafana/dashboards/: tempo-benchmarking.json
contrib/grafana/dashboards/: reth-block-perf.json
crates/alloy/: Cargo.toml
crates/alloy/src/: network.rs
crates/alloy/src/fillers/: nonce.rs
crates/alloy/src/provider/: ext.rs  keychain.rs
crates/alloy/src/rpc/: compat.rs  request.rs
crates/chainspec/: Cargo.toml
crates/chainspec/src/: hardfork.rs  lib.rs  spec.rs
crates/commonware-node/: Cargo.toml
crates/commonware-node/src/: args.rs  lib.rs  notarization_tracker.rs  validators.rs
crates/commonware-node/src/consensus/: engine.rs
crates/commonware-node/src/follow/: resolver.rs
crates/commonware-node/src/peer_manager/: actor.rs  mod.rs
crates/consensus/src/: lib.rs
crates/contracts/: Cargo.toml
crates/contracts/src/precompiles/: account_keychain.rs  tip20.rs
crates/evm/src/: block.rs  evm.rs  lib.rs
crates/faucet/src/: args.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: lib.rs
crates/monitor/src/invariants/: block.rs  mod.rs
crates/node/: Cargo.toml
crates/node/src/: defaults.rs  lib.rs  node.rs
crates/node/src/rpc/: mod.rs  operator.rs
crates/node/tests/assets/: test-genesis.json
crates/node/tests/it/: eth_call.rs  main.rs  pool.rs  tempo_transaction.rs  tip1016_storage_gas.rs  tip_fee_amm.rs  tip_fee_manager.rs  utils.rs
crates/payload/builder/: Cargo.toml
crates/precompiles/: Cargo.toml
crates/precompiles-macros/: Cargo.toml
crates/precompiles-macros/src/: storable.rs
crates/precompiles/src/: error.rs  lib.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs
crates/revm/: Cargo.toml
crates/revm/src/: common.rs  evm.rs  gas_params.rs  handler.rs  lib.rs
crates/transaction-pool/: Cargo.toml
crates/transaction-pool/fuzz/: Cargo.toml
crates/transaction-pool/src/: maintain.rs  metrics.rs  paused.rs  tempo_pool.rs  test_utils.rs  transaction.rs  tt_2d_pool.rs  validator.rs
scripts/: Justfile  PUBLISH.md  sanitize_source.py  sanitize_toml.py
scripts/fuzz/: README.md  run-swarm.sh
scripts/publish/: alloy.sh  common.sh  detect_release_groups.py  publish.sh  revm.sh  utils.py  utils.sh
tips/: tip-1010.md  tip-1011.md  tip-1017.md  tip-1019.md  tip-1020.md  tip-1022.md  tip-1023-proposal.md  tip-1023.md  tip-1024.md  tip-1025.md  tip-1026.md  tip-1027.md  tip-1028.md  tip-1029.md  tip-1032.md  tip-1033.md  tip-1035.md  tip-1037.md  tip-1038.md  tip-1040.md  tip-1042.md  tip-1044.md  tip-1045.md  tip-1046.md  tip-1047.md  tip-1048.md  tip-1049.md
tips/ref-impls/src/: ValidatorConfigV2.sol
tips/ref-impls/test/: AccountKeychain.t.sol  TempoTransactionInvariant.t.sol
xtask/: Cargo.toml
xtask/src/: decode_cert.rs  generate_state_bloat.rs  genesis_args.rs  main.rs
(+52 files in other folders)
