[package]
name = "tempo-alloy"
description = "Tempo blockchain Alloy provider and types"
repository = "https://github.com/tempoxyz/tempo"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
tempo-contracts = { workspace = true, features = ["rpc"] }
tempo-primitives = { workspace = true, features = ["serde"] }
tempo-chainspec = { workspace = true, optional = true }
tempo-evm = { workspace = true, optional = true }
tempo-revm = { workspace = true, optional = true }

alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
alloy-provider.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-transport.workspace = true

reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "72d0e04", version = ">=0", optional = true }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "72d0e04", version = ">=0", default-features = false, optional = true }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", rev = "72d0e04", version = ">=0", optional = true }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "72d0e04", version = ">=0", optional = true }

dashmap.workspace = true
derive_more.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["providers", "rpc-types-eth", "sol-types"] }
eyre.workspace = true
test-case.workspace = true
tokio.workspace = true

[features]
default = []
asm-keccak = [
    "alloy-primitives/asm-keccak",
    "alloy/asm-keccak",
]
tempo-compat = [
    "dep:reth-evm",
    "dep:reth-rpc-convert",
    "dep:reth-primitives-traits",
    "dep:reth-rpc-eth-types",
    "dep:tempo-chainspec",
    "dep:tempo-evm",
    "dep:tempo-revm",
    "tempo-primitives/reth",
    "tempo-primitives/rpc",
]
