[package]
name = "tempo-monitor"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-primitives = { workspace = true, features = ["reth"] }

alloy-consensus.workspace = true
alloy-primitives.workspace = true
